@@ -111,7 +111,7 @@
         <default>96</default>
     </entry>
     <entry key="Image Cache Size" type="Int">
-        <default code="true">(32 * 1024 * 1024)</default>
+        <default code="true">(64 * 1024 * 1024)</default>
     </entry>
     <entry key="Max Custom URL Settings" type="Int">
         <default>9</default>
